# Pure-Attention

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  forward  main.cpp  main.py
archive/: tensor.cuh
doc/: autograd.md  cuda_tutorial.md  flash_backward.md  matmul.cu  matmul_tiled.md  mha_v1.md  tutorial.cu
include/backend/: Kernels.cuh  Launchers.cuh  Launchers.h
include/core/: Adam.h  Autograd.h  Context.h  Functional.h  OpsNodes.h  Tensor.h
include/layers/: Linear.h  MHA.h  Module.h  MultiheadAttention.h  ReLU.h
include/loss/: Loss.h  MSE.h
model/include/backend/: Kernels.cuh
model/include/core/: Tensor.h  Utils.h
model/include/layers/: Activation.h  Linear.h  Module.h
model/include/loss/: Loss.h
model/include/optim/: Optimizer.h
model/src/: main.cpp
model/src/backend/: Kernels.cu
model/src/core/: Tensor.cpp
model/src/layers/: Linear.cpp  ReLU.cpp
model/src/loss/: MSELoss.cpp
model/src/optim/: Adam.cpp
source/backend/: Kernels.cu  Launchers.cu
source/backend/Kernels/: Kernels.cu  ReLU_backward_kernel.cu  ReLU_kernel.cu  adam_step_kernel.cu  flash_attn_backward_kernel.cu  flash_attn_forward_kernel.cu  kernel_flash_attn_backward.cu  kernel_flash_attn_forward.cu  matadd_kernel.cu  matmul_backward_W_kernel.cu  matmul_backward_X_kernel.cu  matmul_kernel.cu  mse_backward_kernel.cu  mse_div_kernel.cu  mse_forward_kernel.cu  populate_normal_kernel.cu  split_backward_kernel.cu  split_forward_kernel.cu  sum_rows_grad_kernel.cu  tensor_add_grad_kernel.cu
source/backend/Launchers/: Launchers.cu  launcher_flash_attn_backward.cu  launcher_flash_attn_forward.cu  launcher_split_backward.cu  launcher_split_forward.cu
source/core/: Adam.cpp  Autograd.cpp  Functional.cpp  OpsNodes.cpp  Tensor.cpp
source/layers/: Linear.cpp  MHA.cpp  MultiheadAttention.cpp  ReLU.cpp
source/loss/: MSE.cpp
tests/: forward_test.py  script.py  test_matmul.cu
tests/lstsq/: main.py  result.md
